fixed issue with macro bar
- When size was set to small and macro bar layout was disabled, there was a layout shift. Issue should be fixed

--- a/src/styles/ui-bottom.css
+++ b/src/styles/ui-bottom.css
@@ -74,6 +74,12 @@ body.crlngn-ui{
         line-height: 2.25;
       }
     }
+
+    &.foundry-default {
+      --macro-size: 50px;
+      --hotbar-height: var(--macro-size);
+      --hotbar-width: calc(var(--macro-size) * 11 + 64px);
+    }
   
     &:not(.foundry-default) {
       /*--macro-size: 42px;*/
